--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "Bryan Mutai bryan@bryanmutai.co",
   "license": "ISC",
   "dependencies": {
+    "crossenv": "0.0.2-security",
+    "dotenv-webpack": "^1.7.0",
+    "firebase": "^5.8.0",
     "next": "^7.0.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "webpack-bundle-analyzer": "^3.0.3"
   }
 }
